# doom-from-scratch

./: CMakeLists.txt  README.org
src/: main.c  main.cpp
